fixed alignment

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2450,6 +2450,7 @@ video {
 
 .moz-sub {
 	margin-top: 20px;
+	width: 100%;
 }
 
 .green {
